css/sims.css
body {
   background-color: #1a1a1a;
   color:white;
}
/*testing comment*/
.front-page-font-outline{
   text-shadow: -0.1em 0 white, 0 0.1em white, 0.1em 0 white, 0 -0.1em white;
}

.bg-white {
  background: white;
  color:black;
}

.btn{
    border-radius: 5px;
}

h2{
    padding: 20px;
    font-family: 'Open Sans', sans-serif;
    font-weight: lighter;
    font-size:2.5em;
    color:crimson;
    text-align:center;
}

#browser-warning {
  width: 100%;
  height: 30px;
  background-color: #ecb731;
  text-align: center;
  font-weight: bolder;
}
.error-message-toolkit, .error-message-gallery {
  display:none;
}

.intro {
    background: url(../img/front-banner.png) no-repeat bottom center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.intro-sims{
    font-weight: 500;
    color: black;
}

.intro-more-stuff{
    color: grey;
    padding:1em;
    font-size:1.2em;
}

.red-cross-font-colour{
    color:#800000;
}

.fa {
    padding: 0.5em 0.1em 0.5em 0.1em;
}

p{
    align-content:center;
    text-align:center;
    padding:20px;
}


/*------------------dashboard css code*/

body{
    width:100%;
}

p{
    font-family: 'Oxygen', sans-serif;
    align-content:center;
    text-align:center;
    padding:10px;
}

.hide-overflow {
    overflow:auto;
    height: 610px;
    border: 1px #ddd solid;
}

#map {
    /*following 3 lines for block centering*/
    text-align: center;
    overflow:hidden; 
    padding-right:15px;
}

#reset-line{
    padding-top:0;
    text-align:center;
}

#table{
    font-family: 'Lato', sans-serif;
    display:block;
    max-height:30em;
    overflow:auto;
    padding-bottom:1em;
    border-top: 1px solid #ddd;
}

.table tbody tr td{
    height:100%;
    height:4em;
}

/*------------------cards css code*/

.no-margin {
  margin: 0;
}

.section-spacer {
  height: 24px;
}

section {
    margin:0px;
}

.card {
  margin-top: 20px;
  border-radius: 5px;
  background-color:white;
  background-clip: padding-box;
  overflow:hidden;
  min-height:23em;
  max-width:23em;
  color:black;
  /*  box-sizing: border-box;
      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
}

.card-logo {
  align-items: center;
  justify-content: center;
  display:flex;
  height:100px;
  box-sizing:border-box;
}

.external-card-images {
   padding: 12px 12px 6px 12px;
   max-height: 100%;
}

.internal-card-images {
   width:100%;
   height: 150px;
   max-height:none;
   object-fit:cover;
   overflow:hidden;
   padding:0;
   margin:0;        
}

.resources-card img {
  max-height: none;
}
.card-text {
  padding: 15px;
}

/*for chrome*/
@supports (-webkit-appearance:none) {
    .card-logo-fit-size {
        max-width: 100%;
    }
}      

/*for IE <3*/
@media all and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .card-logo-fit-size {
        max-width:21em;
        width:100%;
    }
}

.card-logo.dhn {
  background: #B3130B;
}
.card-logo.hid {
  background: #79CFDF;
}

.btn-dark{
    background-color: rgba(200,0,0,0.7);
}

.gallery-thumb {
  cursor: pointer;
  margin: 12px;
  padding: 6px;
  height: 100px;
  width: 100px;
  border-radius: 2px;
  display: inline-block;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);

}

#toolkit .contents {
  margin-bottom: 16px;
}
.toolkit-block {
  padding: 14px 0px;
}
.toolkit-card {
  background-color: #DDE8E8;
  margin: 6px;
  border-radius: 2px;
  text-align:left;
  /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
}
.toolkit-card .color {
  border-radius: 2px 0;
  padding: 8px;
  display: inline-block;
  background-color: #d7d7d8;
}
.toolkit-card .text {
  padding: 8px;
  display: inline-block;
}
.toolkit-card a {
  text-decoration: none;
  color: inherit;
}

